# PhysicsEngine

./: .gitmodules  CMakeLists.txt  README.md
PhysicsEngineCore/: CMakeLists.txt
PhysicsEngineCore/src/: calculate_collisions.cpp  calculate_collisions.hpp  calculate_force.cpp  calculate_force.hpp  phx_circle.cpp  phx_circle.hpp  phx_matrix.hpp  phx_rect.cpp  phx_rect.hpp  phx_vector.hpp  phx_world.cpp  phx_world.hpp
PhysicsEngineEditor/: CMakeLists.txt  main.cpp
